fix(zoom): fix blurred image in Safari (fix #290)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -97,14 +97,6 @@
       -webkit-user-select: none;
       -webkit-touch-callout: none;
 
-      // workaround occasional image flickering in desktop Safari
-      @media screen and (min-width: 800px) {
-        // noinspection CssUnknownProperty
-        -webkit-transform: translateZ(0);
-        -webkit-backface-visibility: hidden;
-        -webkit-transform-style: preserve-3d;
-      }
-
       &_cover {
         width: 100%;
         height: 100%;
@@ -113,6 +105,16 @@
 
       &_loading {
         opacity: 0;
+      }
+    }
+
+    // workaround occasional image flickering in desktop Safari
+    @media screen and (min-width: 800px) {
+      &_wrapper:not(&_wrapper_interactive) &_image {
+        // noinspection CssUnknownProperty
+        -webkit-transform: translateZ(0);
+        -webkit-backface-visibility: hidden;
+        -webkit-transform-style: preserve-3d;
       }
     }
 
